@@ -1,3 +1,15 @@
+2004-08-18  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/ecos/support.c (show_net_times): Removed stats_in_cksum.
+	It does not exist in the FreeBSD stack. Pointed out by
+	Philip Keller.
+	
+2004-08-17  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/sys/kern/sockio.c (bsd_bind): Pass a copy of the sa into
+	bind so that the "kernel" code does not modify the "user" codes
+	version of the socket address.
+
 2004-07-15 Oyvind Harboe <oyvind.harboe@zylin.com>	
 	
 	*cdl/freebsd_net.cdl:
